# SQLAlchemy_Models_module7

./: README.md  alembic.ini  docker-compose.yaml  main.py  models.py  my_select.py  pyproject.toml  seed.py  students.db
alembic/versions/: e2dce0d081b4_init.py
