[tool.poetry]
name = "sqlalchemy-models-module7"
version = "0.1.0"
description = ""
authors = ["KatyaT27 <turuntseva21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"

[tool.poetry.group.dev.dependencies]
SQLAlchemy = "^2.0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
